Services/no-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-external
  labels:
    service: external
spec:
  clusterIP: None
  ports:
    - name: https
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: svc-external
  labels:
    service: external-ep
subsets:
  - addresses:
      - ip: 66.39.74.7
    ports:
      - port: 80
        name: http
